[package]
name = "v4l-webrtc-stream-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.8.0"
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
ogg = "0.9.0"
opus = "0.3.0"
tokio = "1.32.0"
v4l = { path = "./libv4l-rs" }
webrtc = "0.9.0"
